# Casper

./: .gitignore  Casper.pro  LICENSE  README.md  configure.ac
include/core/: AbstractCell.hpp  AbstractStateCell.hpp  Automaton.hpp  Cell.hpp  StateCell.hpp  Tore.hpp  mainWindow.hpp
include/gui/: mainWindow.hpp
src/core/: AbstractCell.cpp  AbstractStateCell.cpp  AliveCell.cpp  Automaton.cpp  Cell.cpp  EmptyCell.cpp  StateCell.cpp  Tore.cpp  main.cpp  mainWindow.cpp
src/gui/: Makefile.am  main.cpp  mainWindow.cpp
